testcase/.antlr/BKITParser.py
# Generated from d:\PPL\assignment1\testcase\BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'Var'", "'Body'", "'Break'", 
                     "'Continue'", "'Do'", "'Else'", "'ElseIf'", "'EndBody'", 
                     "'EndIf'", "'EndFor'", "'EndWhile'", "'For'", "'Function'", 
                     "'If'", "'Parameter'", "'Return'", "'Then'", "'While'", 
                     "'True'", "'False'", "'EndDo'", "'int'", "'float'", 
                     "'boolean'", "'string'", "'+'", "'+.'", "'-'", "'-.'", 
                     "'*'", "'*.'", "'\\'", "'\\.'", "'%'", "'!'", "'&&'", 
                     "'||'", "'=='", "'!='", "'<'", "'>'", "'>='", "'<='", 
                     "'=/='", "'<.'", "'>.'", "'>=.'", "'<=.'", "';'", "':'", 
                     "'.'", "','", "'('", "')'", "'['", "']'", "'{'", "'}'", 
                     "'='" ]

    symbolicNames = [ "<INVALID>", "ID", "VAR", "BODY", "BREAK", "CONTINUE", 
                      "DO", "ELSE", "ELSEIF", "ENDBODY", "ENDIF", "ENDFOR", 
                      "ENDWHILE", "FOR", "FUNCTION", "IF", "PARAMETER", 
                      "RETURN", "THEN", "WHILE", "TRUE", "FALSE", "ENDDO", 
                      "INT_TYPE", "FLOAT_TYPE", "BOOLEAN_TYPE", "STRING_TYPE", 
                      "ADD", "ADD_F", "SUB", "SUB_F", "MULTI", "MULTI_F", 
                      "DIV", "DIV_F", "MOD", "NOT", "ANDAND", "OROR", "EQUAL", 
                      "NOT_EQUAL", "LESS_THAN", "GREATER_THAN", "GREATER_EQUAL", 
                      "LESS_EQUAL", "NOT_EQUAL_F", "LESS_THAN_F", "GREATER_THAN_F", 
                      "GREATER_EQUAL_F", "LESS_EQUAL_F", "SEMI", "COLON", 
                      "DOT", "COMMA", "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACKET", 
                      "RIGHT_BRACKET", "LEFT_BRACE", "RIGHT_BRACE", "ASSIGN", 
                      "DECIMAL_INTEGER", "HEX_INTEGER", "OCT_INTEGER", "FLOAT", 
                      "BOOLEAN", "STRING", "SKIP_", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_variable_decl = 1
    RULE_variable_list = 2
    RULE_array_decl = 3
    RULE_dimension = 4
    RULE_init_value = 5
    RULE_literal = 6
    RULE_integer = 7
    RULE_boolean_literal = 8
    RULE_array = 9
    RULE_array_list = 10
    RULE_body_decl = 11
    RULE_init_body = 12
    RULE_parameter = 13
    RULE_body = 14
    RULE_stmt = 15
    RULE_stmt_list = 16
    RULE_assign_stmt = 17
    RULE_if_stmt = 18
    RULE_for_stmt = 19
    RULE_for_condition = 20
    RULE_while_stmt = 21
    RULE_do_while_stmt = 22
    RULE_break_stmt = 23
    RULE_continue_stmt = 24
    RULE_call_stmt = 25
    RULE_return_stmt = 26
    RULE_function_call = 27
    RULE_exp = 28
    RULE_exp1 = 29
    RULE_exp2 = 30
    RULE_exp3 = 31
    RULE_exp4 = 32
    RULE_exp5 = 33
    RULE_exp6 = 34
    RULE_exp7 = 35
    RULE_exp_list = 36
    RULE_operands = 37
    RULE_multiplying_operators = 38
    RULE_adding_operators = 39
    RULE_sign_operators = 40
    RULE_boolean_operators = 41
    RULE_relational_operators = 42
    RULE_element_exp = 43
    RULE_index_operators = 44
    RULE_expr_index = 45

    ruleNames =  [ "program", "variable_decl", "variable_list", "array_decl", 
                   "dimension", "init_value", "literal", "integer", "boolean_literal", 
                   "array", "array_list", "body_decl", "init_body", "parameter", 
                   "body", "stmt", "stmt_list", "assign_stmt", "if_stmt", 
                   "for_stmt", "for_condition", "while_stmt", "do_while_stmt", 
                   "break_stmt", "continue_stmt", "call_stmt", "return_stmt", 
                   "function_call", "exp", "exp1", "exp2", "exp3", "exp4", 
                   "exp5", "exp6", "exp7", "exp_list", "operands", "multiplying_operators", 
                   "adding_operators", "sign_operators", "boolean_operators", 
                   "relational_operators", "element_exp", "index_operators", 
                   "expr_index" ]

    EOF = Token.EOF
    ID=1
    VAR=2
    BODY=3
    BREAK=4
    CONTINUE=5
    DO=6
    ELSE=7
    ELSEIF=8
    ENDBODY=9
    ENDIF=10
    ENDFOR=11
    ENDWHILE=12
    FOR=13
    FUNCTION=14
    IF=15
    PARAMETER=16
    RETURN=17
    THEN=18
    WHILE=19
    TRUE=20
    FALSE=21
    ENDDO=22
    INT_TYPE=23
    FLOAT_TYPE=24
    BOOLEAN_TYPE=25
    STRING_TYPE=26
    ADD=27
    ADD_F=28
    SUB=29
    SUB_F=30
    MULTI=31
    MULTI_F=32
    DIV=33
    DIV_F=34
    MOD=35
    NOT=36
    ANDAND=37
    OROR=38
    EQUAL=39
    NOT_EQUAL=40
    LESS_THAN=41
    GREATER_THAN=42
    GREATER_EQUAL=43
    LESS_EQUAL=44
    NOT_EQUAL_F=45
    LESS_THAN_F=46
    GREATER_THAN_F=47
    GREATER_EQUAL_F=48
    LESS_EQUAL_F=49
    SEMI=50
    COLON=51
    DOT=52
    COMMA=53
    LEFT_PAREN=54
    RIGHT_PAREN=55
    LEFT_BRACKET=56
    RIGHT_BRACKET=57
    LEFT_BRACE=58
    RIGHT_BRACE=59
    ASSIGN=60
    DECIMAL_INTEGER=61
    HEX_INTEGER=62
    OCT_INTEGER=63
    FLOAT=64
    BOOLEAN=65
    STRING=66
    SKIP_=67
    ERROR_CHAR=68
    UNCLOSE_STRING=69
    ILLEGAL_ESCAPE=70
    UNTERMINATED_COMMENT=71

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def SKIP_(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.SKIP_)
            else:
                return self.getToken(BKITParser.SKIP_, i)

        def variable_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Variable_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Variable_declContext,i)


        def body_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Body_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Body_declContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 92
                    self.match(BKITParser.SKIP_) 
                self.state = 97
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 98
                self.variable_decl()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 107
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 104
                    self.match(BKITParser.SKIP_) 
                self.state = 109
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION:
                self.state = 110
                self.body_decl()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.SKIP_:
                self.state = 116
                self.match(BKITParser.SKIP_)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 122
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def variable_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Variable_listContext)
            else:
                return self.getTypedRuleContext(BKITParser.Variable_listContext,i)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def ASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.ASSIGN)
            else:
                return self.getToken(BKITParser.ASSIGN, i)

        def init_value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Init_valueContext)
            else:
                return self.getTypedRuleContext(BKITParser.Init_valueContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_variable_decl




    def variable_decl(self):

        localctx = BKITParser.Variable_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_variable_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(BKITParser.VAR)
            self.state = 125
            self.match(BKITParser.COLON)
            self.state = 126
            self.variable_list()
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 127
                self.match(BKITParser.ASSIGN)
                self.state = 128
                self.init_value()


            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 131
                self.match(BKITParser.COMMA)
                self.state = 132
                self.variable_list()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKITParser.ASSIGN:
                    self.state = 133
                    self.match(BKITParser.ASSIGN)
                    self.state = 134
                    self.init_value()


                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 142
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(BKITParser.COMMA, 0)

        def variable_list(self):
            return self.getTypedRuleContext(BKITParser.Variable_listContext,0)


        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def array_decl(self):
            return self.getTypedRuleContext(BKITParser.Array_declContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_variable_list




    def variable_list(self):

        localctx = BKITParser.Variable_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variable_list)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 144
                    self.match(BKITParser.ID)
                    pass

                elif la_ == 2:
                    self.state = 145
                    self.array_decl()
                    pass


                self.state = 148
                self.match(BKITParser.COMMA)
                self.state = 149
                self.variable_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.match(BKITParser.ID)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 151
                self.array_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def dimension(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.DimensionContext)
            else:
                return self.getTypedRuleContext(BKITParser.DimensionContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_array_decl




    def array_decl(self):

        localctx = BKITParser.Array_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_array_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(BKITParser.ID)
            self.state = 156 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 155
                self.dimension()
                self.state = 158 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKITParser.LEFT_BRACKET):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_BRACKET(self):
            return self.getToken(BKITParser.LEFT_BRACKET, 0)

        def integer(self):
            return self.getTypedRuleContext(BKITParser.IntegerContext,0)


        def RIGHT_BRACKET(self):
            return self.getToken(BKITParser.RIGHT_BRACKET, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_dimension




    def dimension(self):

        localctx = BKITParser.DimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_dimension)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(BKITParser.LEFT_BRACKET)
            self.state = 161
            self.integer()
            self.state = 162
            self.match(BKITParser.RIGHT_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Init_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.LiteralContext)
            else:
                return self.getTypedRuleContext(BKITParser.LiteralContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_init_value




    def init_value(self):

        localctx = BKITParser.Init_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_init_value)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.literal()
            self.state = 169
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 165
                    self.match(BKITParser.COMMA)
                    self.state = 166
                    self.literal() 
                self.state = 171
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array(self):
            return self.getTypedRuleContext(BKITParser.ArrayContext,0)


        def integer(self):
            return self.getTypedRuleContext(BKITParser.IntegerContext,0)


        def FLOAT(self):
            return self.getToken(BKITParser.FLOAT, 0)

        def boolean_literal(self):
            return self.getTypedRuleContext(BKITParser.Boolean_literalContext,0)


        def STRING(self):
            return self.getToken(BKITParser.STRING, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_literal




    def literal(self):

        localctx = BKITParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_literal)
        try:
            self.state = 177
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.LEFT_BRACE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 172
                self.array()
                pass
            elif token in [BKITParser.DECIMAL_INTEGER, BKITParser.HEX_INTEGER, BKITParser.OCT_INTEGER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 173
                self.integer()
                pass
            elif token in [BKITParser.FLOAT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 174
                self.match(BKITParser.FLOAT)
                pass
            elif token in [BKITParser.TRUE, BKITParser.FALSE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 175
                self.boolean_literal()
                pass
            elif token in [BKITParser.STRING]:
                self.enterOuterAlt(localctx, 5)
                self.state = 176
                self.match(BKITParser.STRING)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntegerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECIMAL_INTEGER(self):
            return self.getToken(BKITParser.DECIMAL_INTEGER, 0)

        def HEX_INTEGER(self):
            return self.getToken(BKITParser.HEX_INTEGER, 0)

        def OCT_INTEGER(self):
            return self.getToken(BKITParser.OCT_INTEGER, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_integer




    def integer(self):

        localctx = BKITParser.IntegerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_integer)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.DECIMAL_INTEGER) | (1 << BKITParser.HEX_INTEGER) | (1 << BKITParser.OCT_INTEGER))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Boolean_literalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(BKITParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(BKITParser.FALSE, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_boolean_literal




    def boolean_literal(self):

        localctx = BKITParser.Boolean_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_boolean_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            _la = self._input.LA(1)
            if not(_la==BKITParser.TRUE or _la==BKITParser.FALSE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_BRACE(self):
            return self.getToken(BKITParser.LEFT_BRACE, 0)

        def RIGHT_BRACE(self):
            return self.getToken(BKITParser.RIGHT_BRACE, 0)

        def array_list(self):
            return self.getTypedRuleContext(BKITParser.Array_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_array




    def array(self):

        localctx = BKITParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.match(BKITParser.LEFT_BRACE)
            self.state = 185
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 20)) & ~0x3f) == 0 and ((1 << (_la - 20)) & ((1 << (BKITParser.TRUE - 20)) | (1 << (BKITParser.FALSE - 20)) | (1 << (BKITParser.LEFT_BRACE - 20)) | (1 << (BKITParser.DECIMAL_INTEGER - 20)) | (1 << (BKITParser.HEX_INTEGER - 20)) | (1 << (BKITParser.OCT_INTEGER - 20)) | (1 << (BKITParser.FLOAT - 20)) | (1 << (BKITParser.STRING - 20)))) != 0):
                self.state = 184
                self.array_list()


            self.state = 187
            self.match(BKITParser.RIGHT_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.LiteralContext)
            else:
                return self.getTypedRuleContext(BKITParser.LiteralContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_array_list




    def array_list(self):

        localctx = BKITParser.Array_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_array_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.literal()
            self.state = 194
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 190
                self.match(BKITParser.COMMA)
                self.state = 191
                self.literal()
                self.state = 196
                self._errHandler.sync(self)
                _la = self._input.LA(1)
